// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`NotFound > it should render 1`] = `
<div
  className="page lightTheme container-fluid"
>
  <div
    className="textRight"
  >
    Dark Mode
    <svg
      aria-hidden="true"
      className="svg-inline--fa fa-toggle-off fa-w-18 fa-2x clickable padTop10px"
      data-icon="toggle-off"
      data-prefix="fas"
      focusable="false"
      onClick={[Function]}
      role="img"
      style={{}}
      viewBox="0 0 576 512"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M384 64H192C85.961 64 0 149.961 0 256s85.961 192 192 192h192c106.039 0 192-85.961 192-192S490.039 64 384 64zM64 256c0-70.741 57.249-128 128-128 70.741 0 128 57.249 128 128 0 70.741-57.249 128-128 128-70.741 0-128-57.249-128-128zm320 128h-48.905c65.217-72.858 65.236-183.12 0-256H384c70.741 0 128 57.249 128 128 0 70.74-57.249 128-128 128z"
        fill="currentColor"
        style={{}}
      />
    </svg>
  </div>
  <div
    className="app"
  >
    <header
      className="appHeader"
    >
      <img
        alt="logo"
        className="appLogo"
        src="/images/react.svg"
      />
      <h2>
        React App
      </h2>
      <small>
        A React starter app with SSR support.
      </small>
    </header>
    <br />
    <br />
    <div
      className="content container"
    >
      <div
        className="container"
      >
        <div
          className="jumbotron"
        >
          <h1>
            404 Not Found!
          </h1>
          <p>
            The page you are looking for was not found.
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`NotFound it should render 1`] = `
<div
  className="Page__page___263Pz Page__lightTheme___2D0Gu container-fluid"
>
  <div
    className="Page__textRight___ucEL3"
  >
    Dark Mode
    <svg
      aria-hidden="true"
      className="svg-inline--fa fa-toggle-off fa-w-18 fa-2x Page__clickable___3mDIS Page__padTop10px___3rfKI"
      data-icon="toggle-off"
      data-prefix="fas"
      focusable="false"
      onClick={[Function]}
      role="img"
      style={{}}
      viewBox="0 0 576 512"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M384 64H192C85.961 64 0 149.961 0 256s85.961 192 192 192h192c106.039 0 192-85.961 192-192S490.039 64 384 64zM64 256c0-70.741 57.249-128 128-128 70.741 0 128 57.249 128 128 0 70.741-57.249 128-128 128-70.741 0-128-57.249-128-128zm320 128h-48.905c65.217-72.858 65.236-183.12 0-256H384c70.741 0 128 57.249 128 128 0 70.74-57.249 128-128 128z"
        fill="currentColor"
        style={{}}
      />
    </svg>
  </div>
  <div
    className="Page__app___1b3SY"
  >
    <header
      className="Page__appHeader___zKEHC"
    >
      <img
        alt="logo"
        className="Page__appLogo___3HGrU"
        src="/images/react.svg"
      />
      <h2>
        React App
      </h2>
      <small>
        A React starter app with SSR support.
      </small>
    </header>
    <br />
    <br />
    <div
      className="Page__content___3sLpF container"
    >
      <div
        className="container"
      >
        <div
          className="jumbotron"
        >
          <h1>
            404 Not Found!
          </h1>
          <p>
            The page you are looking for was not found.
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;
